[package]
name = "asphalt"
version = "0.1.0"
authors = ["Luis Holanda <luiscmholanda@gmail.com>"]
edition = "2018"

[workspace]
members = ["asphalt_core"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asphalt-core = { path = "./asphalt-core" }

