[package]
name = "asphalt_core"
version = "0.1.0"
authors = ["Luis Holanda <luiscmholanda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3.5", default-features = false, features = ["std", "async-await"] }
pin-project = "0.4.22"
futures-core = "0.3.5"
