[package]
name = "asphalt-postgres"
version = "0.1.0"
authors = ["Luis Holanda <luiscmholanda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asphalt-core = { path = "../../asphalt-core" }
tokio-postgres = { version = "0.5.4", features = ["with-uuid-0_8"] }
bytes = "0.5.5"
uuid = "0.8.1"
tokio = { version = "0.2.21", features = ["rt-core", "stream"] }
tokio-postgres-rustls = { version = "0.4.1", optional = true }
rustls = { version = "0.17.0", optional = true }
cfg-if = "0.1.10"
parking_lot = "0.11.0"

[features]
tls = ["rustls", "tokio-postgres-rustls"]
